--- a/react-nodejs-bedrock/backend-cli/package.json
+++ b/react-nodejs-bedrock/backend-cli/package.json
@@ -11,6 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.529.1"
+    "@aws-crypto/sha256-js": "^5.2.0",
+    "@aws-sdk/client-bedrock-agent-runtime": "^3.530.0",
+    "@aws-sdk/client-bedrock-runtime": "^3.529.1",
+    "@aws-sdk/credential-provider-node": "^3.529.1",
+    "@aws-sdk/types": "^3.523.0",
+    "@langchain/community": "^0.0.35",
+    "@smithy/eventstream-codec": "^2.1.4",
+    "@smithy/protocol-http": "^3.2.2",
+    "@smithy/signature-v4": "^2.1.4",
+    "@smithy/util-utf8": "^2.2.0"
   }
 }
